# microserviceswithgo

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  buf.gen.yaml  go.mod  go.sum
.ijwb/: .bazelproject
.ijwb/aspect/: code_generator_info.bzl
api/movieexample/metadata/v1/: metadata.proto
api/movieexample/movie/v1/: movie.proto
cmd/sizecompare/: BUILD.bazel  main.go  main_test.go
metadata/cmd/: BUILD.bazel  main.go
metadata/internal/controller/metadata/: BUILD.bazel  controller.go
metadata/internal/handler/http/: BUILD.bazel  http.go
metadata/internal/repository/: BUILD.bazel
metadata/internal/repository/memory/: BUILD.bazel  memory.go
metadata/pkg/model/: BUILD.bazel
movie/cmd/: BUILD.bazel  main.go
movie/internal/controller/movie/: BUILD.bazel  controller.go
movie/internal/gateway/: BUILD.bazel  error.go
movie/internal/gateway/metadata/http/: BUILD.bazel  metadata.go
movie/internal/gateway/rating/http/: BUILD.bazel  rating.go
movie/internal/handler/http/: BUILD.bazel  http.go
movie/pkg/model/: BUILD.bazel  model.go
pkg/discovery/: BUILD.bazel  discovery.go
pkg/discovery/consul/: BUILD.bazel  consul.go
pkg/discovery/memory/: BUILD.bazel  memory.go
rating/cmd/: BUILD.bazel  main.go
rating/internal/controller/rating/: BUILD.bazel  controller.go
rating/internal/handler/http/: BUILD.bazel  http.go
rating/internal/repository/: BUILD.bazel
rating/internal/repository/memory/: BUILD.bazel  memory.go
rating/pkg/model/: BUILD.bazel  rating.go
tools/: docker_deepclean.sh  start_consul_server.sh
