load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "movieexample.com/metadata/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//metadata/internal/controller/metadata",
        "//metadata/internal/handler/http",
        "//metadata/internal/repository/memory",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
