load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "movieexample.com/movie/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//movie/internal/controller/movie",
        "//movie/internal/gateway/metadata/http",
        "//movie/internal/gateway/rating/http",
        "//movie/internal/handler/http",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
