load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "movieexample.com/rating/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/discovery",
        "//pkg/discovery/consul",
        "//rating/internal/controller/rating",
        "//rating/internal/handler/http",
        "//rating/internal/repository/memory",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
