load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = ["rating.go"],
    importpath = "movieexample.com/movie/internal/gateway/rating/http",
    visibility = ["//movie:__subpackages__"],
    deps = [
        "//movie/internal/gateway",
        "//pkg/discovery",
        "//rating/pkg/model",
    ],
)
